scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/asyncArrowFunction_allowJs.errors.txt
file.js(2,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
file.js(2,20): error TS1005: '}' expected.
file.js(6,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
file.js(6,20): error TS1005: '}' expected.
file.js(10,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
file.js(10,20): error TS1005: '}' expected.
file.js(16,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
file.js(16,20): error TS1005: '}' expected.
file.js(21,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
file.js(21,20): error TS1005: '}' expected.


==== file.js (10 errors) ====
    // Error (good)
    /** @type {function(): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    const a = () => 0
    
    // Error (good)
    /** @type {function(): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    const b = async () => 0
    
    // No error (bad)
    /** @type {function(): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    const c = async () => {
    	return 0
    }
    
    // Error (good)
    /** @type {function(): string} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    const d = async () => {
    	return ""
    }
    
    /** @type {function(function(): string): void} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    const f = (p) => {}
    
    // Error (good)
    f(async () => {
    	return 0
    })